<resources>
    <string name="app_name">Program_Kalkulator</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="application_name">Calculator</string>
    <string name="simple_text">Simple</string>
    <string name="advanced_text">Advanced</string>
    <string name="about_text">About</string>
    <string name="exit_text">Exit</string>
    <string name="title_activity_simple_calculator">SimpleCalculatorActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="autor">Autor: Piotr Pokorski</string>
    <string name="indeks">Nr indeksu: 180261</string>
    <string name="grupa">Grupa 6ITI1</string>
    <string name="title_activity_advanced_calculator">AdvancedCalculatorActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
